--- a/index.css
+++ b/index.css
@@ -57,12 +57,14 @@ p {
 	display: inline-block;
 	padding: 10px 30px;
 	color: white;
-	background-color: transparent;
+	background-color: rgba(0,0,0,0.4) ;
 	border: 2px solid crimson;
 	font-size: 2rem;
+    border-radius: 24px;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	margin-top: 30px;
+	margin-left: 118px;
 	transition: 0.3s ease;
 	transition-property: background-color, color;
 }
@@ -313,6 +315,7 @@ p {
 	max-width: 1500px;
 	margin: 0 auto;
 	padding: 100px 0;
+	box-sizing: border-box;
 }
 
 #services .service-top {
@@ -324,8 +327,10 @@ p {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-wrap: wrap;
+	flex-direction: row;
+	/* flex-wrap: wrap; */
 	margin-top: 50px;
+	width: 1300px;
 }
 
 #services .service-item {
@@ -372,7 +377,7 @@ p {
 
 #services .service-item p {
 	color: white;
-	text-align: left;
+	text-align: center;
 }
 
 /* End Services Section */
@@ -468,7 +473,7 @@ p {
 	text-align: center;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 100px 20px;
+	padding: 43px 20px;
 }
 
 #about .col-left {
